tests/ui/codegen/incorrect-arch-intrinsic.stderr
error: Intrinsic `llvm.s390.sfpc` cannot be used with target arch `TARGET_ARCH`
  --> $DIR/incorrect-arch-intrinsic.rs:9:5
   |
LL |     fn foo(a: i32);
   |     ^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

